# SlackGlossaryBot

./: .gitignore  Dockerfile  LICENSE  README.md  bot.env.template  corrected_glossarydefs_es.csv  docker-compose.yml  environment.yml  manifest.yml  pyproject.toml
SlackGlossary/commands/: commands.py
SlackGlossary/glossary/: acronym_doc_scraper.py  glossary.py
SlackGlossaryBot/: app.py
SlackGlossaryBot/commands/: commands.py
SlackGlossaryBot/glossary/: acronym_doc_scraper.py  corrected_glossarydefs_es.csv  glossary.py  glossarydefs_es.csv
SlackGlossaryBot/glossary/.ipynb_checkpoints/: glossary-checkpoint.py
config/: config.yml  config_csv.yml  config_es.yml  config_json.yml
tests/: test_glossary.py
