[tool.poetry]
name = "SlackGlossaryBot"
version = "0.1.0"
description = "A Slack glossary Bot app"
authors = ["Jennifer Pollack <jpollacke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.3"
aiohttp = "3.8.5"
python-dotenv = "1.0.0"
slack = "0.0.2"
slack-bolt = "1.18.0"
slack-sdk = "3.21.3"
flask = "2.2.3"
slackeventsapi = "3.0.1"
tabulate = "0.9.0"
websockets = "10.4"
pyyaml = "6.0"
pandas = "2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
slglossary = 'SlackGlossaryBot.app:main'
